--- a/crm/index.html
+++ b/crm/index.html
@@ -534,9 +534,8 @@
                 <div style="width:100px;height:100px;border-radius:50%;background:var(--joe-light);display:flex;align-items:center;justify-content:center;overflow:hidden;margin-bottom:8px" id="sig-photo-preview">
                   <span style="font-size:32px;color:var(--joe-gray)">👤</span>
                 </div>
-                <input type="text" id="sig-photo-url" placeholder="Photo URL" style="width:110px;font-size:11px;padding:6px;border:1px solid #e5e7eb;border-radius:4px;margin-bottom:4px" onchange="previewPhotoUrl(this.value)">
-                <button type="button" class="btn btn-small btn-secondary" style="font-size:10px;padding:4px 8px;margin-bottom:4px" onclick="useGooglePhoto()">Use Google Photo</button>
-                <div style="font-size:10px;color:var(--joe-gray)">Paste image URL</div>
+                <input type="hidden" id="sig-photo-url">
+                <div style="font-size:10px;color:var(--joe-gray)">Using Google photo</div>
               </div>
               <div class="form-grid">
                 <div class="form-group"><label>Full Name</label><input type="text" id="sig-name" placeholder="John Smith"></div>
@@ -3241,7 +3240,8 @@ ${transcript.substring(0,10000)}`;
       document.getElementById('sig-phone').value=sig.phone||'';
       document.getElementById('sig-calendar').value=sig.calendar||'';
       document.getElementById('sig-company').value=sig.company||'joe';
-      const photoUrl=sig.photo||currentUser?.avatar||'';
+      // Always use Google photo
+      const photoUrl=currentUser?.avatar||'';
       document.getElementById('sig-photo-url').value=photoUrl;
       if(photoUrl){
         document.getElementById('sig-photo-preview').innerHTML=`<img src="${photoUrl}" style="width:100%;height:100%;object-fit:cover" onerror="this.parentElement.innerHTML='<span style=\\'font-size:32px;color:var(--joe-gray)\\'>👤</span>'">`;
@@ -3256,7 +3256,7 @@ ${transcript.substring(0,10000)}`;
         phone:document.getElementById('sig-phone').value,
         calendar:document.getElementById('sig-calendar').value,
         company:document.getElementById('sig-company').value,
-        photo:document.getElementById('sig-photo-url').value
+        photo:currentUser?.avatar||''
       };
       localStorage.setItem('email_signature',JSON.stringify(sig));
       showToast('Signature saved!');
