--- a/crm/index.html
+++ b/crm/index.html
@@ -1204,6 +1204,7 @@ I noticed {{company}} and thought...
     }
     async function signOut(){await db.auth.signOut();}
 
+    let allPartners=[];
     async function loadAllData(){
       // Get total count for shops
       const{count:shopsCount}=await db.from('shops').select('*',{count:'exact',head:true});
@@ -1211,8 +1212,9 @@ I noticed {{company}} and thought...
       shopsPagination.offset=0;
       shopsPagination.hasMore=true;
       
-      const[sh,c,co,d,seq,t,a,e,tm,mn,et]=await Promise.all([
+      const[sh,partners,c,co,d,seq,t,a,e,tm,mn,et]=await Promise.all([
         db.from('shops').select('*').order('lead_score',{ascending:false}).range(0,49),
+        db.from('shops').select('*').eq('is_joe_partner',true),
         db.from('contacts').select('*').order('created_at',{ascending:false}),
         db.from('companies').select('*').order('name'),
         db.from('deals').select('*').order('created_at',{ascending:false}),
@@ -1224,7 +1226,7 @@ I noticed {{company}} and thought...
         db.from('meeting_notes').select('*').order('meeting_date',{ascending:false}),
         db.from('email_templates').select('*').order('name')
       ]);
-      shops=sh.data||[];contacts=c.data||[];companies=co.data||[];deals=d.data||[];sequences=seq.data||[];tasks=t.data||[];activities=a.data||[];enrollments=e.data||[];meetingNotes=mn.data||[];emailTemplates=et.data||[];
+      shops=sh.data||[];allPartners=partners.data||[];contacts=c.data||[];companies=co.data||[];deals=d.data||[];sequences=seq.data||[];tasks=t.data||[];activities=a.data||[];enrollments=e.data||[];meetingNotes=mn.data||[];emailTemplates=et.data||[];
       shopsPagination.offset=shops.length;
       shopsPagination.hasMore=shops.length<shopsPagination.total;
       const dbTeam=tm.data||[];
@@ -1652,7 +1654,9 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       const owner=document.getElementById('shop-owner-filter').value;
       const lifecycle=document.getElementById('shop-lifecycle-filter')?.value;
       const source=document.getElementById('shop-source-filter')?.value;
-      let f=shops.filter(s=>{
+      // Use allPartners when filtering for partners, otherwise use shops
+      const baseList=lifecycle==='partner'?allPartners:shops;
+      let f=baseList.filter(s=>{
         if(q&&!s.name.toLowerCase().includes(q)&&!(s.city||'').toLowerCase().includes(q)&&!(s.contact_name||'').toLowerCase().includes(q))return false;
         if(shopFilters.cities.length&&!shopFilters.cities.includes(s.city))return false;
         if(shopFilters.states.length&&!shopFilters.states.includes(s.state))return false;
@@ -1666,7 +1670,7 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
         return true;
       });
       f.sort((a,b)=>{let av=a[shopSort.field]||'',bv=b[shopSort.field]||'';if(typeof av==='string'){av=av.toLowerCase();bv=bv.toLowerCase();}return shopSort.dir==='asc'?(av>bv?1:-1):(av<bv?1:-1);});
-      const countText=shopsPagination.searching?f.length+' results':(f.length+' of '+shopsPagination.total+' companies');
+      const countText=lifecycle==='partner'?f.length+' partners':shopsPagination.searching?f.length+' results':(f.length+' of '+shopsPagination.total+' companies');
       document.getElementById('shop-count').textContent=countText;
       const LIFECYCLE_LABELS={prospect:'Prospect',lead:'Lead',opportunity:'Opportunity',customer:'Customer',churned:'Churned'};
       let tableHtml=f.length?f.map(s=>{
@@ -1696,7 +1700,13 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
 
     function toggleMap(){mapVisible=!mapVisible;document.getElementById('map-wrapper').classList.toggle('collapsed',!mapVisible);document.getElementById('map-toggle-btn').classList.toggle('collapsed',!mapVisible);if(mapVisible)setTimeout(()=>{initMap();if(map)map.resize();},100);}
     function initMap(){if(map)return;map=new mapboxgl.Map({container:'shops-map',style:'mapbox://styles/mapbox/light-v11',center:[-98.5795,39.8283],zoom:3.5});map.addControl(new mapboxgl.NavigationControl(),'top-left');map.on('load',()=>renderMapMarkers(shops));}
-    function renderMapMarkers(list){if(!map)return;mapMarkers.forEach(m=>m.remove());mapMarkers=[];const filtered=(list||shops).filter(s=>s.lat&&s.lng);document.getElementById('map-stat-visible').textContent=filtered.length;filtered.forEach(shop=>{const isPartner=shop.is_joe_partner||shop.lifecycle_stage==='customer';const color=isPartner?'#10b981':shop.lead_score>=80?'#f59e0b':shop.lead_score>=60?'#3b82f6':'#6b7280';const size=isPartner?20:16;const el=document.createElement('div');el.style.cssText=`width:${size}px;height:${size}px;background:${color};border:2px solid white;border-radius:50%;cursor:pointer;${isPartner?'box-shadow:0 0 8px rgba(16,185,129,0.5);':''}`;el.title=shop.name+(isPartner?' ☕ Partner':'');el.onclick=()=>openShopModal(shop.id);mapMarkers.push(new mapboxgl.Marker(el).setLngLat([parseFloat(shop.lng),parseFloat(shop.lat)]).addTo(map));});if(filtered.length){const bounds=new mapboxgl.LngLatBounds();filtered.forEach(s=>bounds.extend([parseFloat(s.lng),parseFloat(s.lat)]));map.fitBounds(bounds,{padding:50,maxZoom:12});}}
+    function renderMapMarkers(list){if(!map)return;mapMarkers.forEach(m=>m.remove());mapMarkers=[];
+      // Combine list with all partners, deduping by id
+      const listIds=new Set((list||[]).map(s=>s.id));
+      const combined=[...(list||shops),...allPartners.filter(p=>!listIds.has(p.id))];
+      const filtered=combined.filter(s=>s.lat&&s.lng);
+      document.getElementById('map-stat-visible').textContent=filtered.length;
+      filtered.forEach(shop=>{const isPartner=shop.is_joe_partner||shop.lifecycle_stage==='customer';const color=isPartner?'#10b981':shop.lead_score>=80?'#f59e0b':shop.lead_score>=60?'#3b82f6':'#6b7280';const size=isPartner?20:16;const el=document.createElement('div');el.style.cssText=`width:${size}px;height:${size}px;background:${color};border:2px solid white;border-radius:50%;cursor:pointer;${isPartner?'box-shadow:0 0 8px rgba(16,185,129,0.5);':''}`;el.title=shop.name+(isPartner?' ☕ Partner':'');el.onclick=()=>openShopModal(shop.id);mapMarkers.push(new mapboxgl.Marker(el).setLngLat([parseFloat(shop.lng),parseFloat(shop.lat)]).addTo(map));});if(filtered.length){const bounds=new mapboxgl.LngLatBounds();filtered.forEach(s=>bounds.extend([parseFloat(s.lng),parseFloat(s.lat)]));map.fitBounds(bounds,{padding:50,maxZoom:12});}}
 
     // Drag-drop Pipeline
     function renderDeals(){
