--- a/crm/index.html
+++ b/crm/index.html
@@ -1781,7 +1781,7 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       hideShopActivityForm();
       
       if(id){
-        const s=shops.find(x=>x.id===id);
+        const s=shops.find(x=>x.id===id)||allPartners.find(x=>x.id===id);
         document.getElementById('shop-modal-title').textContent=s.name;
         document.getElementById('shop-name').value=s.name||'';
         document.getElementById('shop-lifecycle').value=s.lifecycle_stage||'prospect';
