--- a/crm/index.html
+++ b/crm/index.html
@@ -654,7 +654,7 @@
         <div class="modal-tab-content active" id="shop-tab-details">
           <div class="form-grid">
             <div class="form-group"><label>Company Name</label><input type="text" id="shop-name"></div>
-            <div class="form-group"><label>Lifecycle</label><select id="shop-lifecycle"><option value="prospect">Prospect</option><option value="lead">Lead</option><option value="opportunity">Opportunity</option><option value="customer">Customer</option><option value="churned">Churned</option></select></div>
+            <div class="form-group"><label>Lifecycle</label><select id="shop-lifecycle"><option value="prospect">Prospect</option><option value="lead">Lead</option><option value="opportunity">Opportunity</option><option value="partner">☕ Partner</option><option value="customer">Customer</option><option value="churned">Churned</option></select></div>
             <div class="form-group"><label>Pipeline Stage</label><select id="shop-stage"><option value="new">New</option><option value="contacted">Contacted</option><option value="qualified">Qualified</option><option value="demo_scheduled">Demo Scheduled</option><option value="proposal">Proposal</option><option value="closed_won">Closed Won</option><option value="closed_lost">Closed Lost</option></select></div>
             <div class="form-group"><label>Lead Score</label><input type="text" id="shop-score" readonly></div>
             <div class="form-group"><label>City</label><input type="text" id="shop-city"></div>
@@ -1675,17 +1675,17 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       f.sort((a,b)=>{let av=a[shopSort.field]||'',bv=b[shopSort.field]||'';if(typeof av==='string'){av=av.toLowerCase();bv=bv.toLowerCase();}return shopSort.dir==='asc'?(av>bv?1:-1):(av<bv?1:-1);});
       const countText=lifecycle==='partner'?f.length+' partners':lifecycle==='leads'?f.length+' leads':shopsPagination.searching?f.length+' results':(f.length+' of '+shopsPagination.total+' companies');
       document.getElementById('shop-count').textContent=countText;
-      const LIFECYCLE_LABELS={prospect:'Prospect',lead:'Lead',opportunity:'Opportunity',customer:'Customer',churned:'Churned'};
+      const LIFECYCLE_LABELS={prospect:'Prospect',lead:'Lead',opportunity:'Opportunity',customer:'Customer',churned:'Churned',partner:'Partner'};
       let tableHtml=f.length?f.map(s=>{
         const ownerName=s.assigned_to?s.assigned_to.split('@')[0]:'—';
         const isMine=s.assigned_to===currentUser?.email;
-        const lc=s.lifecycle_stage||'prospect';
+        const lc=s.is_joe_partner?'partner':(s.lifecycle_stage||'prospect');
         const contactCount=contacts.filter(c=>c.company_id===s.id).length;
         return`<tr>
           <td><span class="clickable" onclick="openShopModal('${s.id}')">${s.name}</span>${contactCount?` <span style="color:var(--joe-gray);font-size:11px">(${contactCount})</span>`:''}</td>
           <td>${s.city||''}, ${s.state||''}</td>
           <td><span class="score ${s.lead_score>=80?'hot':s.lead_score>=60?'warm':'cold'}">${s.lead_score||50}</span></td>
-          <td><span class="badge badge-${lc==='customer'?'green':lc==='opportunity'?'purple':lc==='lead'?'blue':'gray'}">${LIFECYCLE_LABELS[lc]||'Prospect'}</span></td>
+          <td><span class="badge badge-${lc==='partner'||lc==='customer'?'green':lc==='opportunity'?'purple':lc==='lead'?'blue':'gray'}">${LIFECYCLE_LABELS[lc]||'Prospect'}</span></td>
           <td><span class="stage-badge stage-${s.pipeline_stage||'new'}">${SHOP_STAGES.find(st=>st.id===s.pipeline_stage)?.label||'New'}</span></td>
           <td><span class="owner-badge${isMine?' mine':''}">${ownerName}</span></td>
           <td class="actions-cell"><button class="action-btn" onclick="openShopModal('${s.id}')">👁️</button>${s.phone?`<a class="action-btn" href="tel:${s.phone}">📞</a>`:''}${s.email?`<a class="action-btn" href="mailto:${s.email}">✉️</a>`:''}<button class="action-btn" onclick="deleteShop('${s.id}')" style="color:var(--joe-red)" title="Delete">🗑️</button></td>
@@ -1784,7 +1784,7 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
         const s=shops.find(x=>x.id===id)||allPartners.find(x=>x.id===id);
         document.getElementById('shop-modal-title').textContent=s.name;
         document.getElementById('shop-name').value=s.name||'';
-        document.getElementById('shop-lifecycle').value=s.lifecycle_stage||'prospect';
+        document.getElementById('shop-lifecycle').value=s.is_joe_partner?'partner':(s.lifecycle_stage||'prospect');
         document.getElementById('shop-stage').value=s.pipeline_stage||'new';
         document.getElementById('shop-city').value=s.city||'';
         document.getElementById('shop-state').value=s.state||'';
@@ -1816,9 +1816,12 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
     function closeShopModal(){document.getElementById('shop-modal').classList.remove('open');}
     
     async function saveShop(){
+      const lifecycleVal=document.getElementById('shop-lifecycle').value;
+      const isPartner=lifecycleVal==='partner';
       const d={
         name:document.getElementById('shop-name').value,
-        lifecycle_stage:document.getElementById('shop-lifecycle').value,
+        lifecycle_stage:isPartner?'customer':lifecycleVal,
+        is_joe_partner:isPartner,
         pipeline_stage:document.getElementById('shop-stage').value,
         city:document.getElementById('shop-city').value,
         state:document.getElementById('shop-state').value,
@@ -1832,7 +1835,8 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       if(!d.name){showToast('Company name required','error');return;}
       if(currentShopId){
         await db.from('shops').update(d).eq('id',currentShopId);
-        Object.assign(shops.find(s=>s.id===currentShopId),d);
+        const shop=shops.find(s=>s.id===currentShopId)||allPartners.find(s=>s.id===currentShopId);
+        if(shop)Object.assign(shop,d);
       }else{
         d.lead_score=50;
         const{data:n}=await db.from('shops').insert([d]).select().single();
