--- a/crm/index.html
+++ b/crm/index.html
@@ -2007,7 +2007,7 @@ Be concise, friendly, and specific. If asked about data, use the current stats a
       const firstName=document.getElementById('contact-first').value;
       const lastName=document.getElementById('contact-last').value;
       if(!firstName){showToast('First name required','error');return;}
-      const d={first_name:firstName,last_name:lastName,email:document.getElementById('contact-email').value,phone:document.getElementById('contact-phone').value,job_title:document.getElementById('contact-title').value,company_id:companyVal,shop_id:companyVal,lifecycle_stage:document.getElementById('contact-lifecycle').value,lead_source:document.getElementById('contact-source').value||null,assigned_to:document.getElementById('contact-assigned').value||null};
+      const d={first_name:firstName,last_name:lastName,email:document.getElementById('contact-email').value,phone:document.getElementById('contact-phone').value,job_title:document.getElementById('contact-title').value,shop_id:companyVal,lifecycle_stage:document.getElementById('contact-lifecycle').value,lead_source:document.getElementById('contact-source').value||null,assigned_to:document.getElementById('contact-assigned').value||null};
       try{
         if(currentContactId){
           await db.from('contacts').update(d).eq('id',currentContactId);
