--- a/for-coffee-shops.html
+++ b/for-coffee-shops.html
@@ -439,25 +439,19 @@
             color: var(--joe-gold);
         }
 
+        /* Mobile: hide animation, show static text */
+        .mobile-only {
+            display: none;
+        }
+
         @media (max-width: 768px) {
-            .hero h1 {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 0.25rem;
-            }
-            
             .rotating-container {
-                display: block;
-                width: 100%;
-                min-width: auto;
-                text-align: center;
-                height: 1.3em;
+                display: none;
             }
             
-            .rotating-words span {
-                height: 1.3em;
-                line-height: 1.3;
+            .mobile-only {
+                display: block;
+                color: var(--joe-gold);
             }
         }
 
@@ -2092,6 +2086,7 @@
                         <span>Together</span>
                     </div>
                 </div>
+                <span class="mobile-only">Together</span>
             </h1>
             <p class="hero-subtitle">
                 We power independence through shared strength. The world's first all-in-one ecosystem built for indie coffee — replacing fragmented tools and high fees with everything you need to <strong style="color: var(--white);">reduce costs</strong>, <strong style="color: var(--white);">reignite growth</strong>, and <strong style="color: var(--white);">return time to your craft</strong>.
