Fix SMS inbox iMessage UI

--- a/crm/index.html
+++ b/crm/index.html
@@ -304,39 +304,53 @@
     .auth-error{background:rgba(239,68,68,.1);border:1px solid var(--joe-red);padding:12px;border-radius:8px;margin-top:16px;color:var(--joe-red);display:none}
     .quick-actions{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:16px}
     @media(max-width:768px){.sidebar{width:60px}.sidebar-logo span,.nav-section-title,.nav-item span:not(.badge),.user-info{display:none}.form-grid{grid-template-columns:1fr}}
+    
     /* SMS Inbox Styles */
-    .sms-inbox-container{display:flex;height:calc(100vh - 120px);background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 1px 3px rgba(0,0,0,.1)}
-    .sms-conversation-list{width:320px;border-right:1px solid #e5e7eb;display:flex;flex-direction:column}
-    .sms-list-header{padding:16px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}
-    .sms-list-header h2{font-size:18px;margin:0}
+    .sms-inbox-container{display:flex;height:calc(100vh - 120px);background:#fff;border-radius:12px;overflow:hidden;box-shadow:0 2px 12px rgba(0,0,0,.08)}
+    .sms-conversation-list{width:340px;border-right:1px solid #e5e7eb;display:flex;flex-direction:column;background:#fff}
+    .sms-list-header{padding:20px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}
+    .sms-list-header h2{font-size:20px;font-weight:700;margin:0}
     .sms-conversations-scroll{flex:1;overflow-y:auto}
-    .sms-loading{padding:40px 20px;text-align:center;color:var(--joe-gray)}
-    .sms-conv-item{padding:14px 16px;border-bottom:1px solid #f3f4f6;cursor:pointer;display:flex;gap:12px;transition:background .15s}
+    .sms-loading{padding:40px 20px;text-align:center;color:#6b7280}
+    .sms-conv-item{padding:12px 20px;border-bottom:1px solid #f3f4f6;cursor:pointer;display:flex;gap:12px;transition:background .15s}
     .sms-conv-item:hover{background:#f9fafb}
-    .sms-conv-item.active{background:#fef3c7}
+    .sms-conv-item.active{background:#007aff15}
     .sms-conv-item.unread{background:#fffbeb}
     .sms-conv-item.unread .sms-conv-name{font-weight:700}
-    .sms-avatar{width:40px;height:40px;border-radius:50%;background:linear-gradient(135deg,var(--joe-accent),#d97706);color:#fff;display:flex;align-items:center;justify-content:center;font-weight:600;font-size:14px;flex-shrink:0}
+    .sms-avatar{width:48px;height:48px;border-radius:50%;background:linear-gradient(135deg,#007aff,#5856d6);color:#fff;display:flex;align-items:center;justify-content:center;font-weight:600;font-size:16px;flex-shrink:0}
     .sms-conv-content{flex:1;min-width:0}
-    .sms-conv-header{display:flex;justify-content:space-between;margin-bottom:4px}
-    .sms-conv-name{font-size:14px;font-weight:500;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-    .sms-conv-time{font-size:11px;color:var(--joe-gray)}
-    .sms-conv-preview{font-size:13px;color:var(--joe-gray);white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
-    .sms-thread-container{flex:1;display:flex;flex-direction:column}
+    .sms-conv-header{display:flex;justify-content:space-between;margin-bottom:4px;align-items:center}
+    .sms-conv-name{font-size:15px;font-weight:600;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:#1a1a1a}
+    .sms-conv-time{font-size:12px;color:#8e8e93;flex-shrink:0}
+    .sms-conv-preview{font-size:14px;color:#8e8e93;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+    .sms-thread-container{flex:1;display:flex;flex-direction:column;background:#fff}
     .sms-thread{flex:1;display:flex;flex-direction:column}
-    .sms-thread-header{padding:16px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}
+    .sms-thread-header{padding:16px 20px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center;background:#fff}
     .sms-thread-info{display:flex;align-items:center;gap:12px}
-    .sms-thread-info h3{margin:0;font-size:16px}
-    .sms-messages{flex:1;overflow-y:auto;padding:20px;display:flex;flex-direction:column;gap:12px;background:#f9fafb}
-    .sms-message{max-width:70%;display:flex;flex-direction:column}
+    .sms-thread-info h3{margin:0;font-size:17px;font-weight:600}
+    .sms-messages{flex:1;overflow-y:auto;padding:20px;display:flex;flex-direction:column;gap:4px;background:linear-gradient(180deg,#f5f5f5 0%,#fff 100%)}
+    .sms-date-divider{text-align:center;padding:16px 0 8px;font-size:12px;color:#8e8e93;font-weight:500}
+    .sms-message{max-width:75%;display:flex;flex-direction:column;margin:2px 0}
     .sms-message.inbound{align-self:flex-start}
     .sms-message.outbound{align-self:flex-end}
-    .sms-message-bubble{padding:10px 14px;border-radius:16px;font-size:14px;line-height:1.4}
-    .sms-message.inbound .sms-message-bubble{background:#fff;border:1px solid #e5e7eb;border-bottom-left-radius:4px}
-    .sms-message.outbound .sms-message-bubble{background:var(--joe-accent);color:#fff;border-bottom-right-radius:4px}
-    .sms-message-meta{font-size:11px;color:var(--joe-gray);margin-top:4px}
+    .sms-message-bubble{padding:10px 14px;border-radius:18px;font-size:15px;line-height:1.4;word-wrap:break-word}
+    .sms-message.inbound .sms-message-bubble{background:#e5e5ea;color:#1a1a1a;border-bottom-left-radius:4px}
+    .sms-message.outbound .sms-message-bubble{background:#007aff;color:#fff;border-bottom-right-radius:4px}
+    .sms-message-meta{font-size:11px;color:#8e8e93;margin-top:4px;padding:0 4px}
     .sms-message.outbound .sms-message-meta{text-align:right}
-    .sms-composer{padding:16px;border-
+    .sms-composer{padding:12px 16px 16px;background:#fff;border-top:1px solid #e5e7eb}
+    .sms-composer-inner{display:flex;gap:10px;align-items:flex-end;background:#f2f2f7;border-radius:20px;padding:6px 6px 6px 16px}
+    .sms-composer textarea{flex:1;padding:8px 0;border:none;background:transparent;font-size:15px;resize:none;max-height:100px;line-height:1.4;font-family:inherit}
+    .sms-composer textarea:focus{outline:none}
+    .sms-composer textarea::placeholder{color:#8e8e93}
+    .sms-send-btn{width:32px;height:32px;border-radius:50%;background:#007aff;color:#fff;border:none;cursor:pointer;display:flex;align-items:center;justify-content:center;flex-shrink:0;transition:background .15s}
+    .sms-send-btn:hover{background:#0056b3}
+    .sms-send-btn:disabled{background:#c7c7cc;cursor:not-allowed}
+    .sms-char-count{text-align:right;font-size:11px;color:#8e8e93;padding:4px 16px 0}
+    .sms-templates-bar{background:#f9fafb;border-bottom:1px solid #e5e7eb;max-height:200px;overflow-y:auto}
+    .sms-template-item{padding:10px 16px;cursor:pointer;font-size:13px;border-bottom:1px solid #f3f4f6}
+    .sms-template-item:hover{background:#f3f4f6}
+    .sms-empty-state{flex:1;display:flex;align-items:center;justify-content:center}
   </style>
 </head>
 <body>
@@ -497,8 +511,8 @@
         <div class="sms-inbox-container">
           <div class="sms-conversation-list">
             <div class="sms-list-header">
-              <h2>💬 Messages</h2>
-              <select id="sms-filter-status" class="filter-select" onchange="loadSmsConversations()">
+              <h2>Messages</h2>
+              <select id="sms-filter-status" class="filter-select" onchange="loadSmsConversations()" style="border-radius:8px">
                 <option value="all">All</option>
                 <option value="open" selected>Open</option>
                 <option value="closed">Closed</option>
@@ -510,10 +524,10 @@
           </div>
           <div class="sms-thread-container" id="sms-thread-container">
             <div class="sms-empty-state" id="sms-empty-state">
-              <div style="text-align:center;padding:60px 20px;color:var(--joe-gray)">
-                <div style="font-size:48px;margin-bottom:16px">💬</div>
-                <h3 style="margin-bottom:8px">Select a conversation</h3>
-                <p>Choose a conversation from the left to view messages</p>
+              <div style="text-align:center;padding:60px 20px;color:#8e8e93">
+                <div style="font-size:64px;margin-bottom:16px">💬</div>
+                <h3 style="margin-bottom:8px;color:#1a1a1a;font-weight:600">No Conversation Selected</h3>
+                <p style="font-size:15px">Choose a conversation from the list to view messages</p>
               </div>
             </div>
             <div class="sms-thread" id="sms-thread" style="display:none">
@@ -522,30 +536,31 @@
                   <div class="sms-avatar" id="sms-thread-avatar">?</div>
                   <div>
                     <h3 id="sms-thread-name">Unknown</h3>
-                    <span id="sms-thread-phone" style="font-size:12px;color:var(--joe-gray)"></span>
+                    <span id="sms-thread-phone" style="font-size:13px;color:#8e8e93"></span>
                   </div>
                 </div>
-                <div style="display:flex;gap:8px">
-                  <select id="sms-assign-select" class="filter-select" onchange="assignSmsConversation(this.value)">
+                <div style="display:flex;gap:8px;align-items:center">
+                  <select id="sms-assign-select" class="filter-select" onchange="assignSmsConversation(this.value)" style="border-radius:8px;font-size:13px">
                     <option value="">Unassigned</option>
                   </select>
-                  <button class="btn btn-small" onclick="toggleSmsStatus()" id="sms-status-btn">Close</button>
+                  <button class="btn btn-small btn-secondary" onclick="toggleSmsStatus()" id="sms-status-btn" style="border-radius:8px">Close</button>
                 </div>
               </div>
               <div class="sms-messages" id="sms-messages"></div>
               <div class="sms-composer">
-                <div class="sms-templates-bar" id="sms-templates-bar" style="display:none">
-                  <div style="display:flex;justify-content:space-between;padding:8px 12px;background:var(--joe-light);font-size:12px;font-weight:600">
-                    <span>Templates</span><span onclick="closeSmsTemplates()" style="cursor:pointer">×</span>
+                <div id="sms-templates-bar" class="sms-templates-bar" style="display:none;margin-bottom:8px;border-radius:8px">
+                  <div style="display:flex;justify-content:space-between;padding:10px 16px;font-size:13px;font-weight:600;color:#8e8e93">
+                    <span>Quick Replies</span><span onclick="closeSmsTemplates()" style="cursor:pointer">✕</span>
                   </div>
                   <div id="sms-templates-list"></div>
                 </div>
-                <div style="display:flex;gap:10px;align-items:flex-end">
-                  <button class="btn btn-small btn-secondary" onclick="toggleSmsTemplates()">📝</button>
-                  <textarea id="sms-message-input" placeholder="Type a message..." rows="2" style="flex:1;padding:10px;border:1px solid #e5e7eb;border-radius:8px;font-size:14px;resize:none" onkeydown="if(event.key==='Enter'&&!event.shiftKey){event.preventDefault();sendSmsMessage()}"></textarea>
-                  <button class="btn btn-primary" onclick="sendSmsMessage()" id="sms-send-btn">Send</button>
+                <div class="sms-composer-inner">
+                  <textarea id="sms-message-input" placeholder="iMessage" rows="1" onkeydown="if(event.key==='Enter'&&!event.shiftKey){event.preventDefault();sendSmsMessage()}" oninput="updateCharCount()"></textarea>
+                  <button class="sms-send-btn" onclick="sendSmsMessage()" id="sms-send-btn" title="Send">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
+                  </button>
                 </div>
-                <div id="sms-char-count" style="text-align:right;font-size:11px;color:var(--joe-gray);margin-top:4px">0 / 160</div>
+                <div class="sms-char-count" id="sms-char-count">0 / 160</div>
               </div>
             </div>
           </div>
@@ -4495,6 +4510,15 @@ ${transcript.substring(0,10000)}`;
     function formatDateLabel(d) { const date = new Date(d); const today = new Date(); if (date.toDateString() === today.toDateString()) return 'Today'; const y = new Date(today); y.setDate(y.getDate() - 1); if (date.toDateString() === y.toDateString()) return 'Yesterday'; return date.toLocaleDateString(); }
     function getInitials(n) { if (!n) return '?'; const p = n.split(' '); return p.length >= 2 ? (p[0][0] + p[p.length-1][0]).toUpperCase() : n.substring(0,2).toUpperCase(); }
     function escapeHtml(s) { if (!s) return ''; return s.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'})[m]); }
+    function updateCharCount() {
+    const input = document.getElementById('sms-message-input');
+    const count = document.getElementById('sms-char-count');
+    const len = input.value.length;
+    count.textContent = len + ' / 160';
+    count.style.color = len > 160 ? '#ff3b30' : '#8e8e93';
+    input.style.height = 'auto';
+    input.style.height = Math.min(input.scrollHeight, 100) + 'px';
+  }
     
     // Navigation
     function navigateTo(page){document.querySelectorAll('.nav-item').forEach(i=>i.classList.remove('active'));document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));document.querySelector(`[data-page="${page}"]`)?.classList.add('active');document.getElementById('page-'+page)?.classList.add('active');if(page==='shops'){renderShops();setTimeout(()=>{initMap();if(map)map.resize();},100);}if(page==='contacts')renderContacts();if(page==='deals')renderDeals();if(page==='sequences')renderSequences();if(page==='tasks')renderTasks();if(page==='meetings')renderMeetings();if(page==='emails')renderEmailTemplates();if(page==='team')renderTeam();if(page==='sms-inbox')initSmsInbox();}
